Update 24_04
Um dia bem agitado